# LangGraph

./: .gitignore  pyproject.toml
Notebooks/: 10_generator_evaluator.ipynb  11_memory_management.ipynb  12_debugging.ipynb  1_First_Graph.ipynb  2_pydantic.ipynb  3_messages.ipynb  4_prompts.ipynb  5_tools.ipynb  6_ReAct_agent.ipynb  7_parallelization.ipynb  8_routing.ipynb  9_orchestator_worker.ipynb
