[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "asttokens>=3.0.2",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pymupdf>=1.28.0",
    "wikipedia>=1.4.0",
]
